<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/recipient_name"
                android:textColorHint="#AFB8CE"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#AFB8CE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameInputTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/recipient_last_name"
                android:textColorHint="#AFB8CE"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#AFB8CE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInputTxt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameInputTxt">

                <Spinner
                    android:id="@+id/phonesSpinner"
                    android:layout_width="100dp"
                    android:layout_height="match_parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneInputTxt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone number"
                    android:textColorHint="#AFB8CE"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#AFB8CE"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameInputTxt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/roboto"
                        android:hint="Phone number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sendingAmountInputTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/enter_amount"
                android:textColorHint="#AFB8CE"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#AFB8CE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sendingAmountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/recipientRecieveTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/recipient_will_receive"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/sendingAmountInputTxt"
                app:layout_constraintStart_toStartOf="@+id/sendingAmountInputTxt"
                app:layout_constraintTop_toBottomOf="@+id/sendingAmountInputTxt" />

            <TextView
                android:id="@+id/receivedAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/recipientRecieveTxt"
                app:layout_constraintStart_toStartOf="@+id/recipientRecieveTxt"
                app:layout_constraintTop_toBottomOf="@+id/recipientRecieveTxt" />

            <TextView
                android:id="@+id/convertBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/round_rect_background"
                android:foreground="?selectableItemBackground"
                android:padding="10dp"
                android:text="@string/convert"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receivedAmount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>